JumpScript/tests/baselines/reference/taggedTemplatesWithIncompleteTemplateExpressions4.errors.txt
tests/cases/compiler/taggedTemplatesWithIncompleteTemplateExpressions4.jump(5,1): error TS2554: Expected 3 arguments, but got 4.
tests/cases/compiler/taggedTemplatesWithIncompleteTemplateExpressions4.jump(5,24): error TS1109: Expression expected.
tests/cases/compiler/taggedTemplatesWithIncompleteTemplateExpressions4.jump(5,27): error TS1109: Expression expected.
tests/cases/compiler/taggedTemplatesWithIncompleteTemplateExpressions4.jump(5,28): error TS1005: '}' expected.


==== tests/cases/compiler/taggedTemplatesWithIncompleteTemplateExpressions4.jump (4 errors) ====
    function f(x: TemplateStringsArray, y: string, z: string) {
    }
    
    // Incomplete call, but too many parameters.
    f `123qdawdrqw${ 1 }${ }${ 
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 3 arguments, but got 4.
                           ~
!!! error TS1109: Expression expected.
                              
!!! error TS1109: Expression expected.
                               
!!! error TS1005: '}' expected.